Adiciona submódulo temperature-processing

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "microservices/temperature-monitoring"]
 	path = microservices/temperature-monitoring
 	url = git@github.com:Mateusalankoch/ems-algasensors-temperature-monitoring.git
+[submodule "microservices/temperature-processing"]
+	path = microservices/temperature-processing
+	url = git@github.com:Mateusalankoch/ems-algasensors-temperature-processing.git
