--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "microservices/temperature-processing"]
 	path = microservices/temperature-processing
 	url = git@github.com:Mateusalankoch/ems-algasensors-temperature-processing.git
+[submodule "microservices/device-management"]
+	path = microservices/device-management
+	url = git@github.com:Mateusalankoch/ems-algasensors-device-management.git
